--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -24,8 +24,18 @@ const { posts } = Astro.props;
   <ul>
     {
       posts.map((post) => (
-        <BlogPost url={post.id} title={post.data.title} />
+        <li>
+          <BlogPost id={post.id} data={post.data} />
+        </li>
       ))
     }
   </ul>
 </BaseLayout>
+
+<style>
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+</style>
