--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,20 @@ const posts = (await getPublishedPosts()).slice(0, 5);
   <Introduction />
   <h2>Latest blogposts</h2>
   <ul>
-    {posts.map((post) => <BlogPost url={post.id} title={post.data.title} />)}
+    {
+      posts.map((post) => (
+        <li>
+          <BlogPost id={post.id} data={post.data} />
+        </li>
+      ))
+    }
   </ul>
 </BaseLayout>
+
+<style>
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+</style>
