--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import BlogPost from "../components/BlogPost.astro";
-import Introduction from "../components/Introduction.astro";
-import { getPublishedPosts } from "../utils/get-published-posts";
+import BaseLayout from "@layouts/BaseLayout.astro";
+import BlogPost from "@components/BlogPost.astro";
+import Introduction from "@components/Introduction.astro";
+import { getPublishedPosts } from "@utils/get-published-posts";
 
 const pageTitle = "Hi there, I'm Elke! 👋";
 
