--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection, render } from "astro:content";
-import MarkdownPostLayout from "../../layouts/MarkdownPostLayout.astro";
-import { getPublishedPosts } from "../../utils/get-published-posts";
+import MarkdownPostLayout from "@layouts/MarkdownPostLayout.astro";
+import { getPublishedPosts } from "@utils/get-published-posts";
 
 export async function getStaticPaths() {
   const posts = await getPublishedPosts();
