--- a/src/pages/talks.astro
+++ b/src/pages/talks.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import Introduction from "../components/Introduction.astro";
-import { formatDate } from "../utils/format-date";
-import BackToTop from "../components/BackToTop.svelte";
-import Card from "../components/Card.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
+import Introduction from "@components/Introduction.astro";
+import { formatDate } from "@utils/format-date";
+import BackToTop from "@components/BackToTop.svelte";
+import Card from "@components/Card.astro";
 
 const pageTitle = "Talks";
 
