--- a/src/pages/coding/rendez-vous-with-cassidoo.astro
+++ b/src/pages/coding/rendez-vous-with-cassidoo.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import "../../styles/global.css";
+import { getSecret } from "astro:env/server";
 
 const pageTitle = "Rendez-vous with Cassidoo";
 
@@ -8,8 +9,7 @@ const apiURL = `https://api.github.com/repos/ElkeCodes/rendezvous-with-cassidoo-
 const options = {
   headers: {
     Accept: "application/vnd.github+json",
-    Authorization:
-      "Bearer ",
+    Authorization: `Bearer ${getSecret("GITHUB_PERSONAL_ACCESS_TOKEN")}`,
     "X-GitHub-Api-Version": "2022-11-28",
   },
 };
@@ -122,7 +122,6 @@ const lastWeek = parseInt(
   10
 );
 const completionPercentage = Math.floor((solvedWeeks.length / lastWeek) * 100);
-
 ---
 
 <BaseLayout pageTitle={pageTitle}>
