--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,9 +1,38 @@
 ---
 import Card from "./Card.astro";
 
+interface Props {
+  id: string;
+  data: {
+    title: string;
+    description: string;
+    tags: Array<string>;
+  };
+}
+
 const { id, data } = Astro.props;
 ---
 
 <Card href={`/posts/${id}`} title={data.title} actionLabel="Read more">
   <p>{data.description}</p>
+  <ul slot="aside">
+    {data.tags.map((tag) => <li>{tag}</li>)}
+  </ul>
 </Card>
+
+<style>
+  ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 1rem;
+  }
+  ul li::before {
+    content: "#";
+  }
+  ul li {
+    font-size: var(--font-size-sm);
+    color: var(--color-lighter-gray)
+  }
+</style>
