--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -22,14 +22,14 @@ import profilePicture from "../images/elke.jpg";
 
 <style>
   .hero {
-    background: var(--color-gray);
+    background: var(--color-accent);
     padding: 1rem;
     border-radius: 1rem;
-    border: 1px solid var(--color-light-gray);
+    border: 1px solid var(--color-border);
   }
   .hero .picture {
     border-radius: 100%;
-    border: 1px solid var(--color-light-gray);
+    border: 1px solid var(--color-border);
     height: 100px;
     width: 100px;
     shape-outside: circle(50%);
