--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,7 @@
 
 <nav class="menu">
   <ul>
-    <li><a href="/">Home</a></li>
+    <!-- <li><a href="/">Home</a></li> -->
     <li><a href="/blog/">Blog</a></li>
     <li><a href="/talks/">Talks</a></li>
     <li><a href="/coding/">Coding</a></li>
