--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -24,7 +24,10 @@ const pageTitle = "Blog";
 <style>
   ul {
     list-style: none;
-    margin: 0;
+    margin: 1rem 0 0 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 </style>
