--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,10 @@ const posts = (await getPublishedPosts()).slice(0, 5);
 <style>
   ul {
     list-style: none;
-    margin: 0;
+    margin: 1rem 0 0 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 </style>
