--- a/src/pages/talks.astro
+++ b/src/pages/talks.astro
@@ -66,21 +66,25 @@ const talks = [
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  {
-    talks.map((talk) => (
-      <Card
-        title={talk.title}
-        href={talk.slides}
-        actionLabel={`Open the ${talk.title} slides`}
-        target="_blank"
-      >
-        <p class="talk-date">
-          Presented {formatDate(talk.talkDate)} @ {talk.talkLocation}
-        </p>
-        <p>{talk.description}</p>
-      </Card>
-    ))
-  }
+  <ul>
+    {
+      talks.map((talk) => (
+        <li>
+          <Card
+            title={talk.title}
+            href={talk.slides}
+            actionLabel={`Open the ${talk.title} slides`}
+            target="_blank"
+          >
+            <p class="talk-date">
+              Presented {formatDate(talk.talkDate)} @ {talk.talkLocation}
+            </p>
+            <p>{talk.description}</p>
+          </Card>
+        </li>
+      ))
+    }
+  </ul>
   <Introduction />
   <BackToTop client:idle />
 </BaseLayout>
@@ -89,5 +93,14 @@ const talks = [
   .talk-date {
     font-size: var(--font-size-sm);
     color: var(--color-lighter-gray);
+  }
+  
+  ul {
+    list-style: none;
+    margin: 1rem 0 0 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 </style>
