--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 :root {
-  --color-black: #0c0f11;
-  --color-white: #e3e3e3;
+  /* #342E37; */
+  --color-black: #0b0a07;
+  --color-white: #f0f6f6;
   --color-gray: #24292e;
   --color-lighter-gray: color-mix(
     in oklab,
@@ -14,16 +15,25 @@
   );
   --color-dark-gray: color-mix(
     in oklab,
-    var(--color-gray) 30%,
+    var(--color-gray) 80%,
     var(--color-black)
   );
-  --color-primary: #ce4257;
+  --color-primary: #7eb48f;
   --color-primary-hover: color-mix(
     in oklab,
     var(--color-primary) 85%,
     var(--color-black)
   );
-  --color-secondary: #ece4b7;
+  --color-primary-dark: #17271c;
+  --color-primary-dark-hover: color-mix(
+    in oklab,
+    var(--color-primary-dark) 90%,
+    var(--color-white)
+  );
+  --color-secondary: #cf8ca4;
+
+  --color-border: #342e37;
+  --color-accent: #62555e;
 
   --font-size-md: 1rem;
   --font-size-sm: 0.8rem;
@@ -65,23 +75,25 @@ h1 {
 }
 
 h2 {
-  margin: 3rem 0 0rem 0;
-  font-family: var(--font-family-serif);
-  font-weight: 400;
-  font-size: 2rem;
-}
-
-h3 {
-  margin: 2rem 0 0rem 0;
+  margin: 4rem 0 0rem 0;
   font-family: var(--font-family-serif);
   font-weight: 400;
   font-size: 1.5rem;
+  color: var(--color-primary);
+}
+
+h3 {
+  margin: 3rem 0 0rem 0;
+  font-family: var(--font-family-serif);
+  font-weight: 400;
+  font-size: 1.25rem;
+  color: var(--color-secondary);
 }
 
 p {
   font-size: var(--font-size-md);
   line-height: var(--line-height-md);
-  text-align: justify;
+  text-align: left;
 }
 
 p img {
@@ -155,15 +167,15 @@ table th {
 
 button {
   padding: 0.5rem 1rem;
-  background: var(--color-primary);
+  background: var(--color-primary-dark);
   color: var(--color-white);
   border: 0;
   border-radius: 0.5rem;
-  /* border: 1px solid var(--color-primary-hover); */
+  border: 1px solid var(--color-primary-dark-hover);
   transition: background-color 0.5s;
 }
 
 button:hover {
-  background: var(--color-primary-hover);
+  background: var(--color-primary-dark-hover);
   cursor: pointer;
 }
