Finished post about memoization

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -24,7 +24,7 @@ const pageTitle = "Blog";
 <style>
   ul {
     list-style: none;
-    margin: 1rem 0 0 0;
+    margin: 1rem 0;
     padding: 0;
     display: flex;
     flex-direction: column;
