--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -35,7 +35,10 @@ const { posts } = Astro.props;
 <style>
   ul {
     list-style: none;
-    margin: 0;
+    margin: 1rem 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 </style>
