--- a/src/pages/talks.astro
+++ b/src/pages/talks.astro
@@ -97,7 +97,7 @@ const talks = [
   
   ul {
     list-style: none;
-    margin: 1rem 0 0 0;
+    margin: 1rem 0;
     padding: 0;
     display: flex;
     flex-direction: column;
