--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
   --color-gray: #24292e;
   --color-lighter-gray: color-mix(
     in oklab,
-    var(--color-gray) 50%,
+    var(--color-gray) 40%,
     var(--color-white)
   );
   --color-light-gray: color-mix(
@@ -68,10 +68,11 @@ body {
 
 h1 {
   margin: 5rem 0 2rem 0;
-  font-size: 2.5rem;
+  font-size: 2rem;
   border-bottom: 0.2rem double var(--color-secondary);
   font-family: var(--font-family-serif);
   font-weight: 500;
+  letter-spacing: -0.03rem;
 }
 
 h2 {
@@ -80,6 +81,7 @@ h2 {
   font-weight: 400;
   font-size: 1.5rem;
   color: var(--color-primary);
+  letter-spacing: -0.03rem;
 }
 
 h3 {
@@ -88,6 +90,7 @@ h3 {
   font-weight: 400;
   font-size: 1.25rem;
   color: var(--color-secondary);
+  letter-spacing: -0.03rem;
 }
 
 p {
