Added resume page to the menu and added intro the resume

--- a/src/pages/resume/index.astro
+++ b/src/pages/resume/index.astro
@@ -6,11 +6,34 @@ const pageTitle = "Curriculum Vitae";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+  <h2>Summary</h2>
+  <p>
+    My career started in 2013 after graduating with a Bachelors and Masters in
+    Computer Science. I first started out as an Android developer for a small
+    project at university. After that I worked as a fullstack .NET developer for
+    4 years, which greatly improved my knowledge of all kinds of aspects of a
+    job in IT. Since 2018, I went into consultancy where I had the opportunity
+    to further expand my frontend knowledge with projects in Angular, Vue and
+    React. As a consultant, I've worked for 7 clients for a total of more than
+    20 projects.
+  </p>
+  <p>
+    In my career spanning 12 years, I've grown to a senior profile with a lot of
+    different expertises. I currently brand myself as a fullstack developer with
+    deeper knowledge of frontend. I've seen all aspects of a typical IT project:
+    idea brainstorming, estimating costs, designing the architecture, setting up
+    the tools and repositories, implementation of new features, bugfixing,
+    testing, deployments, and so on. This combined with a love of learning new
+    technologies and staying up to date in the everchanging world of frontend,
+    makes me a very interesting asset in your team.
+  </p>
+  <p>
+    You can find me on <a
+      href="https://www.linkedin.com/in/elkeheymans/"
+      target="_blank">LinkedIn</a
+    > and check out my <a href="https://github.com/elkecodes" target="_blank"
+      >GitHub</a
+    >.
+  </p>
   <Experience />
 </BaseLayout>
-<style>
-  dl {
-    display: grid;
-    grid-template-columns: auto 1fr;
-  }
-</style>
