--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,6 +8,7 @@
     <li><a href="/blog/">Blog</a></li>
     <li><a href="/talks/">Talks</a></li>
     <li><a href="/coding/">Coding</a></li>
+    <li><a href="/resume/">Resume</a></li>
   </ul>
   <div class="menu-close icon-close"></div>
 </nav>
