Publish of podcasts blogpost and added more text to certain pages

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -9,7 +9,13 @@ const pageTitle = "Blog";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <p>This is where I will post about my journey learning Astro.</p>
+  <p>
+    An overview of everything I've written down in the past. These are my
+    thoughts, opinions, lessons learned and shared coding knowledge. From time
+    to time, these blogposts will also reflect me besides being a developer as
+    I'll talk about my running, hobbies, and interests.
+  </p>
+  <h2>Blogposts overview</h2>
   <ul>
     {
       allPosts.map((post) => (
