--- a/src/pages/coding/index.astro
+++ b/src/pages/coding/index.astro
@@ -6,13 +6,34 @@ const pageTitle = "Coding projects overview";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <Card
-    title="Rendez-vous with Cassidoo"
-    href="/coding/rendez-vous-with-cassidoo"
-    actionLabel="Open the details"
-    ><p>
-      Trying to solve all interview questions that Cassidoo sends and has sent
-      in her weekly newsletter.
-    </p></Card
-  >
+  <p>
+    To sharpen my developer skills, I love to create new things from time to
+    time. This is an overview of all kinds of coding projects I've done in the
+    past.
+  </p>
+  <h2>All my coding projects</h2>
+  <ul>
+    <li>
+      <Card
+        title="Rendez-vous with Cassidoo"
+        href="/coding/rendez-vous-with-cassidoo"
+        actionLabel="Open the details"
+        ><p>
+          Trying to solve all interview questions that Cassidoo sends and has
+          sent in her weekly newsletter.
+        </p></Card
+      >
+    </li>
+  </ul>
 </BaseLayout>
+
+<style>
+  ul {
+    list-style: none;
+    margin: 1rem 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+</style>
