--- a/src/pages/talks.astro
+++ b/src/pages/talks.astro
@@ -66,6 +66,13 @@ const talks = [
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+  <p>
+    Giving talks as a developer helps me grow in ways coding alone can't. It
+    sharpens my communication skills and deepens my understanding of topics.
+    Thanks to giving talks, I've learned more about Tailwind, headless tables,
+    etymology in IT and more!
+  </p>
+  <h2>List of talks given</h2>
   <ul>
     {
       talks.map((talk) => (
@@ -94,7 +101,7 @@ const talks = [
     font-size: var(--font-size-sm);
     color: var(--color-lighter-gray);
   }
-  
+
   ul {
     list-style: none;
     margin: 1rem 0;
