--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,6 +8,7 @@
     <li><a href="/talks/">Talks</a></li>
     <li><a href="/coding/">Coding</a></li>
     <li><a href="/resume/">Resume</a></li>
+    <li><a href="/now/">Now</a></li>
   </ul>
   <div class="menu-close icon-close"></div>
 </nav>
@@ -31,7 +32,7 @@
 
   nav.menu ul {
     display: flex;
-    gap: 3rem;
+    gap: 2.5rem;
     list-style: none;
     padding: 0;
     flex-direction: column;
@@ -122,7 +123,7 @@
 
     nav.menu a {
       display: inline-block;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 0.5rem;
     }
 
     .hamburger {
