Small update to the now page

--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -38,6 +38,7 @@ import { formatDate } from "@utils/format-date";
       </ul>
     </li>
     <li>Looking to finalise my Advent of Code puzzles of 2025</li>
+    <li>Looking to backup all my dotfiles</li>
   </ul>
   <h2>Working</h2>
   <ul>
