--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -24,6 +24,7 @@ import { formatDate } from "@utils/format-date";
       This blog in Astro:
       <ul>
         <li>Adding pagination to the blogs overview</li>
+        <li>Adding animations</li>
         <li>Trying to get 100% test coverage with vitest, just for fun</li>
         <li>Adding Cypress tests to learn more about Cypress</li>
       </ul>
@@ -49,6 +50,7 @@ import { formatDate } from "@utils/format-date";
   <ul>
     <li>More about Astro by building this site</li>
     <li>Deepening my knowledge of French</li>
+    <li>Animations in CSS</li>
   </ul>
   <h2>Gaming</h2>
   <ul>
