--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import "../styles/global.css";
 import SkipToMainContent from "@components/SkipToMainContent.astro";
+import { ClientRouter } from "astro:transitions";
 const {
   pageTitle,
   openGraph,
@@ -40,6 +41,7 @@ const skipToMainContentId = "main-content";
         </>
       )
     }
+    <!-- <ClientRouter /> -->
   </head>
   <body>
     <SkipToMainContent id={skipToMainContentId} />
