Blogpost about Vue in 2025

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -168,6 +168,10 @@ table th {
   padding: 0.2rem 0.5rem;
 }
 
+table td:first-child {
+  white-space: nowrap;
+}
+
 button {
   padding: 0.5rem 1rem;
   background: var(--color-primary-dark);
