100% test coverage achieved

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -6,11 +6,12 @@ import BackToTop from "@components/BackToTop.svelte";
 import TableOfContents from "@components/TableOfContents.astro";
 import type { MarkdownHeading } from "astro";
 import { formatDate } from "@utils/format-date";
+import { Debug } from "astro:components";
 
 const { data, openGraph, headings } = Astro.props;
 
 const headingsWithPostTitle: MarkdownHeading[] = [
-{
+  {
     slug: "title",
     depth: 1,
     text: data.title,
@@ -18,7 +19,6 @@ const headingsWithPostTitle: MarkdownHeading[] = [
   ...headings,
 ];
 ---
-
 <BaseLayout
   pageTitle={data.title}
   openGraph={openGraph}
