--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -14,9 +14,7 @@ export async function getStaticPaths() {
 const { post } = Astro.props;
 const { Content, headings } = await render(post);
 
-const baseUrl = import.meta.env.DEV
-  ? "http://localhost:4321"
-  : new URL(Astro.request.url).origin;
+const baseUrl = new URL(Astro.request.url).origin;
 
 const { title, shortDescription } = post.data;
 
