Wrote blogpost about nullish coalescing operator

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
 
 <footer>
   <p>&copy; 2025 Elke Heymans</p>
-  <p class="building-blocks">Made with Astro, TypeScript and coffee</p>
+  <p class="building-blocks">Made with Astro, TypeScript and coffee, </p>
   <ul class="socials">
     <li><a href="https://www.github.com/elkecodes">GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/elkeheymans">LinkedIn</a></li>
