--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<nav class="menu">
+<nav class="menu" aria-hidden="true">
   <ul>
     <li><a href="/blog/">Blog</a></li>
     <li><a href="/talks/">Talks</a></li>
