Updated home page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,10 +4,11 @@
 
 <footer>
   <p>&copy; 2025 Elke Heymans</p>
-  <p class="building-blocks">Made with Astro, TypeScript and coffee, </p>
+  <p class="building-blocks">Made with Astro, TypeScript and coffee</p>
   <ul class="socials">
     <li><a href="https://www.github.com/elkecodes">GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/elkeheymans">LinkedIn</a></li>
+    <li><a href="https://bsky.app/profile/elkecodes.dev">Bluesky</a></li>
   </ul>
 </footer>
 
