Added pagination to the blog page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,8 +15,8 @@ const pageTitle = "Blog";
     to time, these blogposts will also reflect me besides being a developer as
     I'll talk about my running, hobbies, and interests.
   </p>
-  <h2>Blogposts overview</h2>
-  <ul>
+  <h2 id="posts-overview">Blogposts overview</h2>
+  <ul aria-labelledby="posts-overview">
     {
       allPosts.map((post) => (
         <li>
