Standardised /blog to /posts

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,7 @@
 
 <nav class="menu" aria-hidden="true">
   <ul>
-    <li><a href="/blog/">Blog</a></li>
+    <li><a href="/posts/">Blog</a></li>
     <li><a href="/talks/">Talks</a></li>
     <li><a href="/coding/">Coding</a></li>
     <li><a href="/resume/">Resume</a></li>
