--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -21,6 +21,12 @@ const pageTitle = `Blogposts #${page.start + 1} - #${page.end + 1}, page #${page
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+  <p>
+    An overview of everything I've written down in the past. These are my
+    thoughts, opinions, lessons learned and shared coding knowledge. From time
+    to time, these blogposts will also reflect me besides being a developer as
+    I'll talk about my running, hobbies, and interests.
+  </p>
   <h2 id="posts-overview">Blogposts overview</h2>
   <ul aria-labelledby="posts-overview">
     {
