--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,6 +23,7 @@ const skipToMainContentId = "main-content";
       as="font"
     />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
@@ -40,7 +41,6 @@ const skipToMainContentId = "main-content";
         </>
       )
     }
-    <!-- <ClientRouter /> -->
   </head>
   <body>
     <SkipToMainContent id={skipToMainContentId} />
